add some basic layout

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="spacer"></div>
+  <app-root class="content"></app-root>
+  <div class="spacer"></div>
 </body>
 </html>
