--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Fussball</title>
+  <title>Lieblingsfussballer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="background-image: url(fussball.jpg);">
   <div class="spacer"></div>
   <app-root class="content"></app-root>
   <div class="spacer"></div>
